--- a/src/partials/_common-footer.html
+++ b/src/partials/_common-footer.html
@@ -47,12 +47,12 @@
                   <a
                     href="#"
                     class="footer-logo"
-                    title="Fashion Template by AppSeed"
+                    title="Premium Fashion Store"
                     data-aos="zoom-in-left"
                   >
                     <img
                       src="assets/img/logo-footer.svg"
-                      alt="Fashion Template by AppSeed"
+                      alt="Premium Fashion Store"
                     />
                   </a>
                 </div>
