--- a/src/partials/_common-navigation.html
+++ b/src/partials/_common-navigation.html
@@ -30,8 +30,8 @@
   <!-- Start Navbar Part -->
   <nav class="navbar navbar-expand-lg p-0">
     <div class="container-xxl">
-      <a class="navbar-brand" href="/" title="Fashion Template by AppSeed"
-        ><img src="assets/img/logo.svg" alt="Fashion Template by AppSeed"
+      <a class="navbar-brand" href="/" title="Premium Fashion Store"
+        ><img src="assets/img/logo.svg" alt="Premium Fashion Store"
       /></a>
 
       <div
@@ -41,8 +41,8 @@
         aria-labelledby="offcanvasExampleLabel"
       >
         <div class="offcanvas-header primary-gradient py-2">
-          <a class="navbar-brand" href="#" title="Fashion Template by AppSeed"
-            ><img src="assets/img/logo.svg" alt="Fashion Template by AppSeed"
+          <a class="navbar-brand" href="#" title="Premium Fashion Store"
+            ><img src="assets/img/logo.svg" alt="Premium Fashion Store"
           /></a>
           <button
             type="button"
