--- a/src/partials/_common-footer.html
+++ b/src/partials/_common-footer.html
@@ -47,12 +47,12 @@
                   <a
                     href="#"
                     class="footer-logo"
-                    title="Premium Fashion Store"
+                    title="[COMPANY NAME]"
                     data-aos="zoom-in-left"
                   >
                     <img
                       src="assets/img/logo-footer.svg"
-                      alt="Premium Fashion Store"
+                      alt="[COMPANY NAME]"
                     />
                   </a>
                 </div>
@@ -106,16 +106,16 @@
                     <h5 class="mb-3 mb-md-4">Company</h5>
                     <ul class="footer-links">
                       <li>
-                        <a href="#" title="About">About</a>
+                        <a href="#" title="About">[About]</a>
                       </li>
                       <li>
-                        <a href="#" title="Contact us">Contact us</a>
+                        <a href="#" title="Contact us">[Contact us]</a>
                       </li>
                       <li>
-                        <a href="#" title="Support">Support</a>
+                        <a href="#" title="Support">[Support]</a>
                       </li>
                       <li>
-                        <a href="#" title="Careers">Careers</a>
+                        <a href="#" title="Careers">[Careers]</a>
                       </li>
                     </ul>
                   </div>
@@ -127,16 +127,16 @@
                     <h5 class="mb-3 mb-md-4">Quick Link</h5>
                     <ul class="footer-links">
                       <li>
-                        <a href="#" title="Share Location">Share Location</a>
+                        <a href="#" title="Share Location">[Share Location]</a>
                       </li>
                       <li>
-                        <a href="#" title="Orders Tracking">Orders Tracking</a>
+                        <a href="#" title="Orders Tracking">[Orders Tracking]</a>
                       </li>
                       <li>
-                        <a href="#" title="Size Guide">Size Guide</a>
+                        <a href="#" title="Size Guide">[Size Guide]</a>
                       </li>
                       <li>
-                        <a href="#" title="FAQs">FAQs</a>
+                        <a href="#" title="FAQs">[FAQs]</a>
                       </li>
                     </ul>
                   </div>
@@ -149,11 +149,11 @@
                     <ul class="footer-links">
                       <li>
                         <a href="#" title="Terms & conditions"
-                          >Terms & conditions</a
+                          >[Terms & conditions]</a
                         >
                       </li>
                       <li>
-                        <a href="#" title="Privacy Policy">Privacy Policy</a>
+                        <a href="#" title="Privacy Policy">[Privacy Policy]</a>
                       </li>
                     </ul>
                   </div>
