Refactor FAQ section: Replaced placeholder text with descriptive tags for section title, questions, and answers to enhance clarity and maintainability.

--- a/src/partials/_index-faq.html
+++ b/src/partials/_index-faq.html
@@ -6,15 +6,14 @@
                   class="quick-questions-heading-title text-generator"
                   data-aos="fade-up"
                 >
-                  Quick Questions to ask
+                  [FAQ SECTION TITLE]
                 </h2>
                 <p
                   class="quick-questions-heading-text mb-0"
                   data-aos="fade-up"
                   data-aos-delay="200"
                 >
-                  Lorem Ipsum is simply dummy text of the printing and typesetting
-                  industry. Lorem Ipsum has been the
+                  [FAQ SECTION DESCRIPTION - Lorem ipsum dolor sit amet, consectetur adipiscing elit.]
                 </p>
               </div>
               <div class="row">
@@ -33,7 +32,7 @@
                           aria-expanded="true"
                           aria-controls="flush-collapseOne"
                         >
-                          What services does TanahAir Offer?
+                          [FAQ Question 1]
                           <img class="icon" src="assets/img/ic-plus.svg" alt="" />
                         </button>
                       </h2>
@@ -44,9 +43,7 @@
                         data-bs-parent="#accordionFlushExample"
                       >
                         <div class="accordion-body">
-                          TanahAir offers a service for creating a website design,
-                          illustration, icon set, website development, animation
-                          and digital marketing.
+                          [FAQ Answer 1 - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.]
                         </div>
                       </div>
                     </div>
@@ -64,8 +61,7 @@
                           aria-expanded="true"
                           aria-controls="flush-collapseTwo"
                         >
-                          How does TanahAir create website content without knowing
-                          our Business plan?
+                          [FAQ Question 2]
                           <img class="icon" src="assets/img/ic-plus.svg" alt="" />
                         </button>
                       </h2>
@@ -76,10 +72,7 @@
                         data-bs-parent="#accordionFlushExample"
                       >
                         <div class="accordion-body">
-                          TanahAir will schedule interviews with customers who
-                          have used our services and discuss business about the
-                          product and help solve the problem so that it becomes
-                          the best solution.
+                          [FAQ Answer 2 - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.]
                         </div>
                       </div>
                     </div>
@@ -97,7 +90,7 @@
                           aria-expanded="true"
                           aria-controls="flush-collapseThree"
                         >
-                          What often will results be reported?
+                          [FAQ Question 3]
                           <img class="icon" src="assets/img/ic-plus.svg" alt="" />
                         </button>
                       </h2>
@@ -108,11 +101,7 @@
                         data-bs-parent="#accordionFlushExample"
                       >
                         <div class="accordion-body">
-                          We will report each section that has been done, such as
-                          Flow, wireframe for each category, then full wireframe
-                          until it becomes a complete design and we will report
-                          the development of the website approximately every 1
-                          week.
+                          [FAQ Answer 3 - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.]
                         </div>
                       </div>
                     </div>
@@ -134,8 +123,7 @@
                           aria-expanded="true"
                           aria-controls="flush-collapse01"
                         >
-                          Why should i choose a Design studio like TanahAir over
-                          full-service agency?
+                          [FAQ Question 4]
                           <img class="icon" src="assets/img/ic-plus.svg" alt="" />
                         </button>
                       </h2>
@@ -146,11 +134,7 @@
                         data-bs-parent="#accordionFlushExample"
                       >
                         <div class="accordion-body">
-                          Because TanahAir provides the best service to customers
-                          and provides flexibility to solve problems with our
-                          experts so that customers get satisfaction. And we
-                          provide service very quickly according to the price we
-                          offer
+                          [FAQ Answer 4 - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.]
                         </div>
                       </div>
                     </div>
@@ -168,7 +152,7 @@
                           aria-expanded="true"
                           aria-controls="flush-collapse02"
                         >
-                          What will be delivered? And When?
+                          [FAQ Question 5]
                           <img class="icon" src="assets/img/ic-plus.svg" alt="" />
                         </button>
                       </h2>
@@ -179,11 +163,7 @@
                         data-bs-parent="#accordionFlushExample"
                       >
                         <div class="accordion-body">
-                          What will be given is a design and development to become
-                          a website for that time depending on the difficulties
-                          the client gives us. However, the track record we have
-                          done to create a website design and development will
-                          take about 1 month
+                          [FAQ Answer 5 - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.]
                         </div>
                       </div>
                     </div>
@@ -201,8 +181,7 @@
                           aria-expanded="true"
                           aria-controls="flush-collapse03"
                         >
-                          How Quickly will i start seeing result after working
-                          with TanahAir?
+                          [FAQ Question 6]
                           <img class="icon" src="assets/img/ic-plus.svg" alt="" />
                         </button>
                       </h2>
@@ -213,10 +192,7 @@
                         data-bs-parent="#accordionFlushExample"
                       >
                         <div class="accordion-body">
-                          About 1 week there will be results that we give to
-                          clients. Because after the client makes payments we will
-                          begin to share a task with our workers and do the work
-                          as quickly as possible
+                          [FAQ Answer 6 - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.]
                         </div>
                       </div>
                     </div>
