Replace video modal with YouTube link button in top banner: Updated the top banner to link directly to a YouTube video, removing the modal functionality for a more streamlined user experience.

--- a/src/partials/_index-top-banner.html
+++ b/src/partials/_index-top-banner.html
@@ -21,41 +21,16 @@
   >
     <span class="text-white">Shop now</span>
   </a>
-  <!-- Button trigger modal -->
-  <button
-    type="button"
+  <!-- YouTube Link Button -->
+  <a
+    href="https://www.youtube.com"
+    target="_blank"
+    rel="noopener noreferrer"
     class="btn btn-primary rounded-circle text-uppercase modal-btn"
-    data-bs-toggle="modal"
-    data-bs-target="#video-modal"
     data-aos="flip-left"
+    title="Watch on YouTube"
   >
     <img src="assets/img/ic-play.svg" alt="" />
-  </button>
+  </a>
 </section>
 <!-- End main Banner -->
-
-<!-- Modal -->
-<div class="modal fade" id="video-modal" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-lg">
-    <div class="modal-content">
-      <div class="modal-body">
-        <button
-          type="button"
-          class="btn-close btn-close-white"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-        ></button>
-        <div class="modal-video-outer">
-          <iframe
-            id="video"
-            src="https://www.youtube.com/embed/wWY_clozJlU"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-          ></iframe>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
